--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,16 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
-   <script>
-    var glob=[];
-    
-   </script>
- 
+  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+  <meta http-equiv="Pragma" content="no-cache" />
+  <meta http-equiv="Expires" content="0" />
+  <script>
+    var glob = [];
+
+  </script>
+
   <title>GeoAppTest</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -15,7 +19,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
-<body class="mat-typography"  >
-  <app-root></app-root> 
+
+<body class="mat-typography">
+  <app-root></app-root>
 </body>
+
 </html>
